docs: add documentation for delete user handler
